<resources>
    <string name="app_name">LopSoTayLienLac</string>
    <string name="title_appname">Sổ Tay Liên Lạc Điện Tử</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_tuongtac">Tương tác</string>
    <string name="title_thongbao">Thông báo</string>
    <string name="title_taikhoan">Tài khoản</string>
    <string name="title_schedule">Thời khóa biểu</string>
    <string name="title_malop">Mã lớp</string>
    <string name="title_tenlop">Tên lớp</string>
    <string name="title_mssv">MSSV</string>
    <string name="label_hovaten">Họ và Tên</string>
    <string name="label_diem_cuoi_ki">Điểm cuối kì:</string>
    <string name="label_diem_giua_ki">Điểm giữa kì:</string>
    <string name="txtParentScore_noscore">Bạn không có môn học để xem</string>

    <string name="txtConf">Bạn chắc chắn?</string>
    <string name="txt_conf_del_noti">Xóa tất cả thông báo?</string>
    <string name="ok">OK</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="mark_as_read">Đánh dấu đã đọc</string>
    <string name="delete">Xóa</string>
    <string name="nonoti">Bạn không có thông báo nào</string>
    <string name="qlthongbao">Quản lý thông báo</string>
    <string name="ng_nhan">Người nhận</string>
    <string name="tieude">Tiêu đề</string>
    <string name="lop">Lớp</string>
    <string name="themthongbao">Thêm thông báo</string>
    <string name="noidung">Nội dung</string>
    <string name="hocphi">Học phí</string>
    <string name="dtc">đ/tc</string>

    <string name="title_monhoc">Thương mại điện tử</string>
    <string name="title_price">2.400.000 VNĐ</string>
    <string name="txtStudentFee_nofee">Bạn không có học phí cần đóng!!!</string>

    <string name="txtDiem">ĐIỂM</string>
    <string name="title_diemscore">Điểm: 10.0</string>
    <string name="title_dialog_monhoc">Thương mại điện tử</string>

    <string name="diem_tong_ket">Điểm tổng kết:</string>
    <string name="diem10">10</string>

    <string name="title_quanlylophoc">Quản lý các lớp học</string>
    <string name="txt_tenhocphan">Tên học phần:</string>
    <string name="txt_mahocphan">Mã học phần:</string>
    <string name="txt_sotinchi">Số tín chỉ:</string>
    <string name="txt_soluongsinhvien">Số lượng sinh viên:</string>
    <string name="txt_danhsachlop">Danh sách lớp:</string>

    <string name="label_Conf">Bạn chắc chắn?</string>
    <string name="label_conf_del_noti">Xóa tất cả thông báo?</string>
    <string name="btn_ok">OK</string>
    <string name="btn_yes">Có</string>
    <string name="btn_no">Không</string>
    <string name="label_mark_as_read">Đánh dấu đã đọc</string>
    <string name="btn_delete">Xóa</string>
    <string name="label_nonoti">Bạn không có thông báo nào</string>
    <string name="title_qlthongbao">Quản lý thông báo</string>
    <string name="label_ng_nhan">Người nhận</string>
    <string name="label_tieude">Tiêu đề</string>
    <string name="title_lop">Lớp</string>
    <string name="title_themthongbao">Thêm thông báo</string>
    <string name="label_noidung">Nội dung</string>
    <string name="title_hocphi">Học phí</string>
    <string name="label_dtc">đ/tc</string>
    <string name="label_khongtimthay">Không tìm thấy</string>
    <string name="btn_gui">Gửi</string>

    <string name="app_fullname">Sổ tay liên lạc điện tử</string>
    <string name="username">Tên Đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="signin">Đăng nhập</string>

    <string name="txt_view_grade">Xem điểm</string>
    <string name="txt_schedule">Thời khóa biểu</string>
    <string name="txt_xemlich">Xem lịch</string>
    <string-array name="role_spinner">
        <item>Học sinh</item>
        <item>Phụ huynh</item>
        <item>Admin</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_failed">Đăng nhập thất bại</string>
    <string name="check_info_login">Kiểm tra thông tin đăng nhập</string>
    <string name="temp">temp</string>
    <string name="title_chitietthongbao">Chi tiết thông báo</string>
    <string name="noti_chinhapso">Chỉ nhập số</string>
    <string name="noti_dathem">Đã thêm</string>
    <string name="noti_themthatbai">Thêm không thành công</string>
    <string name="noti_load">Load thành công</string>
    <string name="noti_load_fail">Load thất bại</string>
    <string name="label_hocphinam">Học phí năm </string>
    <string name="label_nguoigui">Người gửi</string>
    <string name="hocsinh">Học sinh</string>
    <string-array name="spn_Receiver">
        <item>Học sinh</item>
        <item>Phụ huynh</item>
    </string-array>

</resources>