<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_border_radius"
    android:elevation="10dp">


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/title_dialog_monhoc"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDiemGiuaKi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="116dp"
        android:text="@string/diem10"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/txtDiemCuoi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_diem_cuoi_ki"
        android:textColor="#333333"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDiemGiua" />

    <TextView
        android:id="@+id/txtDiemTongKet"
        android:layout_width="23dp"
        android:layout_height="26dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="112dp"
        android:text="@string/diem10"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDiemCuoiKi" />

    <TextView
        android:id="@+id/txtDiemTong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/diem_tong_ket"
        android:textColor="#333333"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDiemCuoi" />

    <TextView
        android:id="@+id/txtDiemCuoiKi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="116dp"
        android:text="@string/diem10"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDiemGiuaKi" />

    <TextView
        android:id="@+id/txtDiemGiua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/label_diem_giua_ki"
        android:textColor="#333333"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtDiemGiuaKi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtDiemGiuaKi"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnScoreOK"
        android:layout_width="142dp"
        android:layout_height="52dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="256dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_round_corner"
        android:text="@string/ok"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>