<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"
        android:background="@drawable/card_round_corner"
        android:textSize="30dp"
        android:text="@string/title_themthongbao"
        android:gravity="start"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:padding="14dp"
        android:textColor="@color/black"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/card_round_corner">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_round_corner">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_ng_nhan"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/spiner_round"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_tieude"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="40dp"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:layout_marginTop="20dp"
                   android:background="@drawable/card_round_corner"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_lop"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/spiner_round"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_noidung"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/card_round_corner"
                    android:inputType="textMultiLine"
                    android:lines="10"
                    android:minLines="5"
                    android:scrollHorizontally="false"/>

                <Button
                    android:id="@+id/btnOK"
                    android:layout_width="125dp"
                    android:layout_height="45dp"
                    android:layout_marginBottom="128dp"
                    android:background="@drawable/btn_round_corner"
                    android:text="@string/btn_gui"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:layout_gravity="end"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"/>


            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>


</LinearLayout>