<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.dashboard.DashboardFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_round_corner"
        android:gravity="left"
        android:padding="25dp"
        android:text="@string/title_tuongtac"
        android:textAllCaps="true"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="317dp"
        android:layout_height="485dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/dialog_border_radius">


        <TextView
            android:id="@+id/itdbSchedulepr"
            android:layout_width="89dp"
            android:layout_height="103dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/it_dasboard_radius"
            android:drawableTop="@drawable/ic_schedule_pink"
            android:paddingTop="15dp"
            android:text="@string/txt_schedule"
            android:textAlignment="center"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itdbFeepr"
            android:layout_width="82dp"
            android:layout_height="103dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/it_dasboard_radius"
            android:drawableTop="@drawable/ic_fee_stpr"
            android:paddingTop="15dp"
            android:textSize="12dp"
            android:text="@string/hocphi"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/itdbSchedulepr"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itdbViewGradespr"
            android:layout_width="82dp"
            android:layout_height="103dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/it_dasboard_radius"
            android:paddingTop="15dp"
            android:textSize="12dp"
            android:drawableTop="@drawable/ic_view_grades"
            android:text="@string/txt_view_grade"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/itdbFeepr"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>