<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.dashboard.DashboardFragment">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/card_round_corner"
        android:gravity="left"
        android:padding="14dp"
        android:text="@string/title_tuongtac"
        android:textAllCaps="true"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="317dp"
        android:layout_height="485dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="61dp"
        android:background="@drawable/dialog_border_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle">


        <TextView
            android:id="@+id/itdbSchedule"
            android:layout_width="89dp"
            android:layout_height="103dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/it_dasboard_radius"
            android:drawableTop="@drawable/ic_schedule_pink"
            android:paddingTop="15dp"
            android:text="@string/txt_schedule"
            android:textAlignment="center"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itdbFee"
            android:layout_width="82dp"
            android:layout_height="103dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/it_dasboard_radius"
            android:drawableTop="@drawable/ic_fee_stpr"
            android:paddingTop="15dp"
            android:textSize="12dp"
            android:text="@string/hocphi"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/itdbSchedule"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itdbViewGrades"
            android:layout_width="82dp"
            android:layout_height="103dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/it_dasboard_radius"
            android:paddingTop="15dp"
            android:textSize="12dp"
            android:drawableTop="@drawable/ic_view_grades"
            android:text="@string/txt_view_grade"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/itdbFee"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>